--- a/localisation/ac_other_l_english.yml
+++ b/localisation/ac_other_l_english.yml
@@ -3,3 +3,5 @@
  WFL_GIRLS: "Waifuland"
  WFL_TRAPS: "Trapland"
 
+#Effects
+ ac_instantiate_province_tt:0 "A province §Y[?country_to_initiate.GetName]§! will be formed."
