--- a/localisation/ac_characters_l_english.yml
+++ b/localisation/ac_characters_l_english.yml
@@ -92,6 +92,7 @@
   ac_alicia: "Alicia"
   ac_isht_karin_orte: "Isht Karin Orte"
   ac_mona_megistus: "Mona Megistus"
+  ac_raiden_shogun: "Raiden Shogun"
 
  #Admirals
   ac_yamato_kancol: "Yamato Kancol"
