--- a/localisation/ac_characters_l_russian.yml
+++ b/localisation/ac_characters_l_russian.yml
@@ -85,229 +85,197 @@
  ac_snow: "Сноу"
  ac_alicia: "Алисия"
  ac_isht_karin_orte: "Ишт Карин Орте"
-
- #Admirals
-  ac_yamato_kancol: "Ямато КанКол"
-  ac_atago_azur_lane: "Атаго Лазурный путь"
-  ac_avrora_azur_lane: "Аврора Лазурный путь"
-  ac_belfast: "Белфаст Лазурный путь"
-  ac_marblehead_azur_lane: "Марблхэд Лазурный путь"
-  ac_saint_louis_azur_lane: "Святой Луиз Лазурный путь"
-  ac_takao_azur_lane: "Такао Лазурный путь"
-  ac_tosa_azur_lane: "Тоса Лазурный путь"
-  ac_sovetskaya_rossiya: "Советская Россия Лазурный путь"
-  ac_shima_tateishi: "Сима Татэиси"
-  ac_akeno_misaki: "Акэно Мисаки"
-  ac_beidou: "Бэйдоу"
-#HEN
- #leaders
-  
-  ac_mari_setogaya: "Мари Сеготая"
-  ac_sheliss_elleness_zurbach: "Шелис Эленес Зурбах"
-  ac_mind_flayer: "§RПожиратель разума§!"
-
- #marshals
-  ac_olga_discordia: "Ольга Дискордия"
-  ac_celestine_lucullus: "Селестина Лукулл"
-
- #generals
-  ac_saori_asamiya: "Саори Асамия"
-  ac_mistiora_arte: "Мистиора Арте"
-  ac_iris_arcadia: "Ирис Аркадия"
-  
-  ac_igawa_asagi: "Асаги Игава"
-  ac_anri_sogahara: "Анри Согахара"
-  ac_rina_komiya: "Рина Комия"
-  ac_anna_komiya: "Анна Комия"
-  ac_ruma: "Рума" 
-  ac_yuuki_kawaragi: "Юки Кавараги"
-  ac_tsubasa_kamijo: "Цубаса Камиджо"
-  ac_prim_fiorire: "Прим Фиори"
-  ac_cloe: "Хлоя"
-  ac_claudia_le_van_tyne: "Клаудия ле Ван Тин"
-  ac_alicia_arcturus: "Алисия Арктур"
-  ac_risa: "Риса"
-  ac_kasumi_nanakura: "Касуми Нанакура"
-  ac_ai_kagano: "Ай Кагано"
-  ac_rin: "Рин"
-  ac_alice_erzan: "Алиса Эрзан"
-  ac_frey_ringitt: "Фрей Ринджитт"
-
- #admirals
-  ac_kaname: "Канамэ"
-  ac_suomi: "Суоми"
-  ac_akiho_taniguchi: "Акихо Танигути"
-  ac_sill_plain: "Силл Плейн"
- #advisors
-  ac_mika_amano: "Мика Амано"
-#MAH
- #leaders
-  ac_asuka_ootorii: "Асука Отории"
-  ac_nanoha_takamachi: "Наноха Такамати"
-  ac_usagi_tsukino: "Усаги Цукино"
-  ac_momo_chiyoda: "Момо Тиёда"
- #advisors
-  ac_hitomi_tsukishiro: "Хитоми Цукисиро"
-  ac_kobato_hanato: "Кобато Ханато"
-
- #marshal
-
- #generals
-  ac_madoka_kaname: "Мадока Канамэ"
-  ac_illyasviel_von_einzbern: "Иллиясфиль фон Айнцберн"
-  ac_arika_yumemiya: "Арика Юмэмия"
-  ac_ami_mizuno: "Ами Мизуно"
-  ac_makoto_kino: "Макото Кино"
-  ac_minako_aino: "Минако Айно"
-  ac_rei_hino: "Рэй Хино"
-  ac_chisato_yonamine: "Тисато Ёнаминэ"
-  ac_kurumi_mugen: "Куруми Мугэн"
-  ac_homura_akemi: "Хомура Акэми"
-  ac_subaru_nakajima: "Субару Накадзима"
-  ac_vivio: "Вивио Такамати"
-  ac_fate_testarossa: "Фейт Тестаросса"
-  ac_saki_uno: "Саки Уно"
-  ac_hayato_juumonji: "Хаято Джумонджи"
-  ac_frill: "Фрилл"
-  ac_mia_cyrus: "Миа Сайрус"
-  ac_honey_kisaragi: "Хани Кисараги"
-  ac_mai_tokiha: "Май Токиха"
-  ac_lena_sayers: "Лена Сейерс"
-  ac_maron_kusakabe: "Марон Кусакабэ"
-  ac_nagisa_misumi: "Нагиса Мисуми"
-  ac_honoka_yukishiro: "Хонока Юкисиро"
-  ac_himeno_awayuki: "Химэно Аваюки"
-  ac_sakura_kinomoto: "Сакура Киномото"
-  ac_mint_aizawa: "Минт Айдзава"
-  ac_zakuro_fujiwara: "Дзакуро Фудзивара"
-  ac_komugi_yoshida: "Комуги Йошида"
-  ac_amanogawa_kirara: "Кирара Аманогава"
-  ac_ichinose_minori: "Минори Итиносэ"
-  ac_laura_la_mer: "Лаура"
-  ac_momozono_love: "Лав Момозоно"
-  ac_natsuumi_manatsu: "Манацу Нацуми"
-  ac_shiratori_yuriko: "Юрико Сиратори"
-  ac_takizawa_asuka: "Асука Такидзава"
-
- #admirals
-  ac_sakuyo_mikage: "Сакуё Микагэ"
-  ac_akane_isshiki: "Аканэ Иссики"
-  ac_utena_tenjou: "Утэна Тэндзё"
-  ac_lucia_nanami: "Лючия Нанами"
-#MEH
- #lider
-  ac_kos-mos: "KOS-MOS"
-  ac_fiora_mechon: "Фиора Мехон"
-  ac_mythra: "Митра"
-  ac_histoire: "Истуар"
-
- #marshal
-  ac_iris_heart: "Пурпурное Сердце"
- #generals
-  ac_alisa_boskonovich: "Алиса Босконович"
-  ac_risa_android: "Риза"
-  ac_2b: "2B"
-  ac_cibo: "Сибо"
-  ac_a2: "A2"
-  ac_svetlana_sakura: "Светлана Сакура"
-  ac_alexandra_frolova: "Александра Фролова"
-  ac_edi: "Сузи"
-  ac_pyra: "Пура"
-  ac_rozen_s_series: "Роза S серия"
-  ac_clarion: "Кларион"
-  ac_maki_ivanova: "Маки Иванова"
-  ac_pneuma: "Пневма"
-  ac_hatsune_miku: "Мику Хацунэ"
-  ac_hana: "Хана"
-  ac_automaton: "Автомат"
-  ac_phantom_queen_ex-xecty: "Призрачная королева Экс-Ксекты"
-  ac_mhmd-02_haruko: "MHMD 02 Харуко"
-  ac_t-elos: "T-Elos"
-  ac_aino: "Айно"
-  ac_rose_android: "Роза Андроид"
-  ac_elizabeth: "Элизабет"
-  ac_vivy: "Виви"
-  ac_norimaki_arale: "Арале Норимаки"
-
- #admiral
-  ac_ashigara_arp: "Ашигара ARP"
-  ac_takao_arp: "Такао ARP"
-  ac_i-410: "Иона ARP"
-  ac_haruna: "Харуна ARP"
-  ac_kirishima: "Киришима ARP"
-  ac_kongou_arp: "Конго ARP"
-  ac_atago_arp: "Атаго ARP"
-  ac_caseal: "Касил"
-  ac_hiei_arp: "Хиэй ARP"
- #advisor
-  ac_yurizaki_mira: "Мира Юризаки"
-#MMS
- #lider
-  ac_velvet_crowe: "Вельвет Крау"
-  ac_yuuko_yoshida: "Юко Ёсида"
-  ac_maou: "Мао"
-  ac_holo: "Холо"
- #marshal
-  ac_fino_bloodstone: "Фино Бладстоун"
-  ac_rhea: "Эрхея"
-  ac_shiraori: "Шираори"
-  ac_ishtar: "Иштар"
-  ac_lilith: "Лилит"
-  ac_rose: "Роза"
-  ac_morrah: "Морах"
-  ac_ripine: "Рипин"
-  ac_dullahan: "Дюллахан"
-  ac_milla_maxwell: "Милла Максвелл"
-  ac_astaroth: "Астарот"
-  ac_laharl_girl: "Лахарл"
-  ac_desco: "Деско"
-  ac_tiamat: "Тиамат"
-  ac_belldandy: "Верданди"
-  ac_corrin: "Коррин"
-  ac_lucy: "Люси"
-  ac_makina_hoshimura: "Макина Хосимура"
-  ac_saya_kisaragi: "Сая Кисараги"
-  ac_zero_two: "02"
-  ac_vignette_april_tsukinose: "Виньетта Эйприл Цукиносэ"
-  ac_satanichia_mcdowell_kurumizawa: "Сатаникия МакДауэлл Курумидзава"
-  ac_arnice: "Арнис"
-  ac_saya_otonashi: "Сая Отонаси"
-  ac_marie_von_eisenberg: "Мария Вон Эзенберг"
-  ac_kurari_rose: "Роза Курари"
-  ac_heine: "Хайне"
-  ac_freyja: "Фрея"
-  ac_saphentite_neikes: "Сафентит Нейкс"
-  ac_miia: "Мия"
-  ac_asmodeus: "Асмодеус"
-  ac_yamato_wg: "Ямато WG"
-  ac_purifier: "Пурифайер"
-  ac_tester: "Тестер"
-  ac_meroune_lorelei: "Мероуна Лорелей"
-  ac_shigure: "Сигурэ"
-  ac_prinz_eugen: "Принц Ойген"
-  ac_lilia_eberwein: "Лилия Эвельвайн"
-  ac_catue_dragundaala: "Катюа Драгундала"
-  ac_violet_evergarden: "Вайолет Эвергарден"
-  ac_aegis: "Эгида"
-  ac_aika_sumeragi: "Айка Сумэраги"
-  ac_aoba_suzukaze: "Аоба Сузуказэ"
-  ac_chii: "Ти"
-  ac_kaori_weber: "Каори Вэбер"
-  ac_mako_mitsuki: "Мако Мицуки"
-  ac_makoto_kikuchi: "Макото Кикути"
-  ac_mei-fang: "Мэйфан"
-  ac_miki_naoki: "Мики Наоки"
-  ac_mio_naruse: "Мио Нарусэ"
-  ac_rias_gremory: "Риас Гремори"
-  ac_rosaria: "Розария"
-  ac_reina_prowler: "Рэйна Проулер"
-  ac_sakura_minamoto: "Сакура Минамото"
-  ac_sheryl_nome: "Шерил Ноум"
-  ac_shiki: "Шики"
-  ac_tomoko_kuroki: "Томоко Куроки"
-  ac_vanessa_diodati: "Ванесса Диодати"
-  ac_yuriya_komiya: "Юрия Комия"
-  ac_mona_megistus: "Мона Мегистус"
+ ac_yamato_kancol: "Ямато КанКол"
+ ac_atago_azur_lane: "Атаго Лазурный путь"
+ ac_avrora_azur_lane: "Аврора Лазурный путь"
+ ac_belfast: "Белфаст Лазурный путь"
+ ac_marblehead_azur_lane: "Марблхэд Лазурный путь"
+ ac_saint_louis_azur_lane: "Святой Луиз Лазурный путь"
+ ac_takao_azur_lane: "Такао Лазурный путь"
+ ac_tosa_azur_lane: "Тоса Лазурный путь"
+ ac_sovetskaya_rossiya: "Советская Россия Лазурный путь"
+ ac_shima_tateishi: "Сима Татэиси"
+ ac_akeno_misaki: "Акэно Мисаки"
+ ac_beidou: "Бэйдоу"
+ ac_mari_setogaya: "Мари Сеготая"
+ ac_sheliss_elleness_zurbach: "Шелис Эленес Зурбах"
+ ac_mind_flayer: "§RПожиратель разума§!"
+ ac_olga_discordia: "Ольга Дискордия"
+ ac_celestine_lucullus: "Селестина Лукулл"
+ ac_saori_asamiya: "Саори Асамия"
+ ac_mistiora_arte: "Мистиора Арте"
+ ac_iris_arcadia: "Ирис Аркадия"
+ ac_igawa_asagi: "Асаги Игава"
+ ac_anri_sogahara: "Анри Согахара"
+ ac_rina_komiya: "Рина Комия"
+ ac_anna_komiya: "Анна Комия"
+ ac_ruma: "Рума" 
+ ac_yuuki_kawaragi: "Юки Кавараги"
+ ac_tsubasa_kamijo: "Цубаса Камиджо"
+ ac_prim_fiorire: "Прим Фиори"
+ ac_cloe: "Хлоя"
+ ac_claudia_le_van_tyne: "Клаудия ле Ван Тин"
+ ac_alicia_arcturus: "Алисия Арктур"
+ ac_risa: "Риса"
+ ac_kasumi_nanakura: "Касуми Нанакура"
+ ac_ai_kagano: "Ай Кагано"
+ ac_rin: "Рин"
+ ac_alice_erzan: "Алиса Эрзан"
+ ac_frey_ringitt: "Фрей Ринджитт"
+ ac_kaname: "Канамэ"
+ ac_suomi: "Суоми"
+ ac_akiho_taniguchi: "Акихо Танигути"
+ ac_sill_plain: "Силл Плейн"
+ ac_mika_amano: "Мика Амано"
+ ac_asuka_ootorii: "Асука Отории"
+ ac_nanoha_takamachi: "Наноха Такамати"
+ ac_usagi_tsukino: "Усаги Цукино"
+ ac_momo_chiyoda: "Момо Тиёда"
+ ac_hitomi_tsukishiro: "Хитоми Цукисиро"
+ ac_kobato_hanato: "Кобато Ханато"
+ ac_madoka_kaname: "Мадока Канамэ"
+ ac_illyasviel_von_einzbern: "Иллиясфиль фон Айнцберн"
+ ac_arika_yumemiya: "Арика Юмэмия"
+ ac_ami_mizuno: "Ами Мизуно"
+ ac_makoto_kino: "Макото Кино"
+ ac_minako_aino: "Минако Айно"
+ ac_rei_hino: "Рэй Хино"
+ ac_chisato_yonamine: "Тисато Ёнаминэ"
+ ac_kurumi_mugen: "Куруми Мугэн"
+ ac_homura_akemi: "Хомура Акэми"
+ ac_subaru_nakajima: "Субару Накадзима"
+ ac_vivio: "Вивио Такамати"
+ ac_fate_testarossa: "Фейт Тестаросса"
+ ac_saki_uno: "Саки Уно"
+ ac_hayato_juumonji: "Хаято Джумонджи"
+ ac_frill: "Фрилл"
+ ac_mia_cyrus: "Миа Сайрус"
+ ac_honey_kisaragi: "Хани Кисараги"
+ ac_mai_tokiha: "Май Токиха"
+ ac_lena_sayers: "Лена Сейерс"
+ ac_maron_kusakabe: "Марон Кусакабэ"
+ ac_nagisa_misumi: "Нагиса Мисуми"
+ ac_honoka_yukishiro: "Хонока Юкисиро"
+ ac_himeno_awayuki: "Химэно Аваюки"
+ ac_sakura_kinomoto: "Сакура Киномото"
+ ac_mint_aizawa: "Минт Айдзава"
+ ac_zakuro_fujiwara: "Дзакуро Фудзивара"
+ ac_komugi_yoshida: "Комуги Йошида"
+ ac_amanogawa_kirara: "Кирара Аманогава"
+ ac_ichinose_minori: "Минори Итиносэ"
+ ac_laura_la_mer: "Лаура"
+ ac_momozono_love: "Лав Момозоно"
+ ac_natsuumi_manatsu: "Манацу Нацуми"
+ ac_shiratori_yuriko: "Юрико Сиратори"
+ ac_takizawa_asuka: "Асука Такидзава"
+ ac_sakuyo_mikage: "Сакуё Микагэ"
+ ac_akane_isshiki: "Аканэ Иссики"
+ ac_utena_tenjou: "Утэна Тэндзё"
+ ac_lucia_nanami: "Лючия Нанами"
+ ac_kos-mos: "KOS-MOS"
+ ac_fiora_mechon: "Фиора Мехон"
+ ac_mythra: "Митра"
+ ac_histoire: "Истуар"
+ ac_iris_heart: "Пурпурное Сердце"
+ ac_alisa_boskonovich: "Алиса Босконович"
+ ac_risa_android: "Риза"
+ ac_2b: "2B"
+ ac_cibo: "Сибо"
+ ac_a2: "A2"
+ ac_svetlana_sakura: "Светлана Сакура"
+ ac_alexandra_frolova: "Александра Фролова"
+ ac_edi: "Сузи"
+ ac_pyra: "Пура"
+ ac_rozen_s_series: "Роза S серия"
+ ac_clarion: "Кларион"
+ ac_maki_ivanova: "Маки Иванова"
+ ac_pneuma: "Пневма"
+ ac_hatsune_miku: "Мику Хацунэ"
+ ac_hana: "Хана"
+ ac_automaton: "Автомат"
+ ac_phantom_queen_ex-xecty: "Призрачная королева Экс-Ксекты"
+ ac_mhmd-02_haruko: "MHMD 02 Харуко"
+ ac_t-elos: "T-Elos"
+ ac_aino: "Айно"
+ ac_rose_android: "Роза Андроид"
+ ac_elizabeth: "Элизабет"
+ ac_vivy: "Виви"
+ ac_norimaki_arale: "Арале Норимаки"
+ ac_ashigara_arp: "Ашигара ARP"
+ ac_takao_arp: "Такао ARP"
+ ac_i-410: "Иона ARP"
+ ac_haruna: "Харуна ARP"
+ ac_kirishima: "Киришима ARP"
+ ac_kongou_arp: "Конго ARP"
+ ac_atago_arp: "Атаго ARP"
+ ac_caseal: "Касил"
+ ac_hiei_arp: "Хиэй ARP"
+ ac_yurizaki_mira: "Мира Юризаки"
+ ac_velvet_crowe: "Вельвет Крау"
+ ac_yuuko_yoshida: "Юко Ёсида"
+ ac_maou: "Мао"
+ ac_holo: "Холо"
+ ac_fino_bloodstone: "Фино Бладстоун"
+ ac_rhea: "Эрхея"
+ ac_shiraori: "Шираори"
+ ac_ishtar: "Иштар"
+ ac_lilith: "Лилит"
+ ac_rose: "Роза"
+ ac_morrah: "Морах"
+ ac_ripine: "Рипин"
+ ac_dullahan: "Дюллахан"
+ ac_milla_maxwell: "Милла Максвелл"
+ ac_astaroth: "Астарот"
+ ac_laharl_girl: "Лахарл"
+ ac_desco: "Деско"
+ ac_tiamat: "Тиамат"
+ ac_belldandy: "Верданди"
+ ac_corrin: "Коррин"
+ ac_lucy: "Люси"
+ ac_makina_hoshimura: "Макина Хосимура"
+ ac_saya_kisaragi: "Сая Кисараги"
+ ac_zero_two: "02"
+ ac_vignette_april_tsukinose: "Виньетта Эйприл Цукиносэ"
+ ac_satanichia_mcdowell_kurumizawa: "Сатаникия МакДауэлл Курумидзава"
+ ac_arnice: "Арнис"
+ ac_saya_otonashi: "Сая Отонаси"
+ ac_marie_von_eisenberg: "Мария Вон Эзенберг"
+ ac_kurari_rose: "Роза Курари"
+ ac_heine: "Хайне"
+ ac_freyja: "Фрея"
+ ac_saphentite_neikes: "Сафентит Нейкс"
+ ac_miia: "Мия"
+ ac_asmodeus: "Асмодеус"
+ ac_yamato_wg: "Ямато WG"
+ ac_purifier: "Пурифайер"
+ ac_tester: "Тестер"
+ ac_meroune_lorelei: "Мероуна Лорелей"
+ ac_shigure: "Сигурэ"
+ ac_prinz_eugen: "Принц Ойген"
+ ac_lilia_eberwein: "Лилия Эвельвайн"
+ ac_catue_dragundaala: "Катюа Драгундала"
+ ac_violet_evergarden: "Вайолет Эвергарден"
+ ac_aegis: "Эгида"
+ ac_aika_sumeragi: "Айка Сумэраги"
+ ac_aoba_suzukaze: "Аоба Сузуказэ"
+ ac_chii: "Ти"
+ ac_kaori_weber: "Каори Вэбер"
+ ac_mako_mitsuki: "Мако Мицуки"
+ ac_makoto_kikuchi: "Макото Кикути"
+ ac_mei-fang: "Мэйфан"
+ ac_miki_naoki: "Мики Наоки"
+ ac_mio_naruse: "Мио Нарусэ"
+ ac_rias_gremory: "Риас Гремори"
+ ac_rosaria: "Розария"
+ ac_reina_prowler: "Рэйна Проулер"
+ ac_sakura_minamoto: "Сакура Минамото"
+ ac_sheryl_nome: "Шерил Ноум"
+ ac_shiki: "Шики"
+ ac_tomoko_kuroki: "Томоко Куроки"
+ ac_vanessa_diodati: "Ванесса Диодати"
+ ac_yuriya_komiya: "Юрия Комия"
+ ac_mona_megistus: "Мона Мегистус"
+ ac_raiden_shogun: "Райден Сёгун"
 
 #traps
  ac_homare_nao: "Хомаре Нао"
