--- a/localisation/ac_decision_l_russian.yml
+++ b/localisation/ac_decision_l_russian.yml
@@ -40,6 +40,7 @@
  ac_recruit_takumi_musashino: "Нанять §GТакуми Мусасино§!"
  ac_recruit_hideri_kanzaki: "Нанять §GХидэри Кандзаки§!"
  ac_recruit_ishtar: "Нанять §GИштар§!"
+ ac_recruit_raiden_shogun: "Нанять §G$ac_raiden_shogun$§!"
 
 #Liders
  ac_change_leader_to_anastasia_romanova: "Назначить  §GАнастасию Романову§! лидером"
@@ -66,6 +67,7 @@
  ac_change_leader_to_mona_megistus: "§G[ac_mona_megistus.GetName]§! станет лидером государства"
  ac_change_leader_to_asuka: "§G[ac_asuka.GetName]§! станет лидером государства"
  ac_change_leader_to_ishtar: "§G[ac_ishtar.GetName]§! станет лидером государства"
+ ac_change_leader_to_raiden_shogun: "§G$ac_raiden_shogun$§! станет лидером государства"
 
 #tooltips
  ac_tt_count_generals: "Нанято хотя бы 5 генералов"
