Изменил анимешную академию и добавид решение для востановления косметического тега

--- a/localisation/ac_decision_l_english.yml
+++ b/localisation/ac_decision_l_english.yml
@@ -21,6 +21,7 @@
  ac_decision_gacha_trap_theorists: "Hire a trap theorist"
  ac_decision_gacha_trap_air_chiefs: "Hire an trap air force general"
  ac_decision_gacha_trap_operatives: "Hire an trap operative"
+ ac_restore_cosmetic_tag: "Restore cosmetic tag"
 
 #recruits
  ac_recruit_anastasia_romanova: "Hire §GFnastasia Romanova§!"
