--- a/localisation/ac_decision_l_russian.yml
+++ b/localisation/ac_decision_l_russian.yml
@@ -22,6 +22,7 @@
  ac_decision_gacha_trap_air_chiefs: "Нанять трапа генерала авиации"
  ac_decision_gacha_trap_operatives: "Нанять трапа оперативника"
  ac_deactivate: "Скрыть категорию"
+ ac_restore_cosmetic_tag: "Восстановить косметический тег"
 
 #recruits
  ac_recruit_anastasia_romanova: "Нанять §GАнастасию Романову§!"
