--- a/localisation/ac_traits_l_english.yml
+++ b/localisation/ac_traits_l_english.yml
@@ -43,8 +43,18 @@ ac_princess_of_terror: "§RPrincess of Terror§!"
  ac_quartermaster_general: "Quartermaster General"
  ac_trait_astrologist: "Astrologist"
  ac_nuclear_scientist: "$nuclear_scientist$"
- ac_governor_general:0 "Governor-General"
+ ac_governor_general: "Governor-General"
  ac_head_of_intelligence: "$head_of_intelligence$"
+ ac_monster_maker: "Monster maker"
+ ac_walking_toxic_gas_emitter: "Walking Toxic Gas Emitter"
+ ac_librarian_trait: "Librarian"
+ ac_pharmacist: "Pharmacist"
+ ac_trait_secretary: "Secretary"
+ ac_trait_minister_of_perversion: "§RMinister of Perversion§!"
+ ac_trait_head_of_counterintelligence: "Head of counterintelligence"
+ ac_trait_necromancer_advisor: "§RNecromancer§!"
+ ac_trait_great_survivor_advisor: "$great_survivor$"
+ ac_trait_minister_of_foreign_affairs: "Foreign Minister"
 
 #unut leader traits
  ac_exp_trait: "High learning ability"
