--- a/localisation/ac_characters_l_english.yml
+++ b/localisation/ac_characters_l_english.yml
@@ -365,3 +365,15 @@
   ac_gasper_vladi: "Gasper Vladi"
   ac_ryou_akizuki: "Ryou Akizuki"
   ac_saki_mizushima: "Saki Mizushima"
+
+ ac_simon_hartmann: "Simon Hartmann"
+ ac_adolfo_camila: "Adolfo Camila"
+ ac_adelita_grau: "Adelita Grau"
+ ac_kisaragi_yura: "Kisaragi Yura"
+ ac_coco: "Coco"
+ ac_noma_rune: "Noma Rune"
+ ac_kiruko: "Kiruko"
+ ac_poison: "Poison"
+ ac_chen_li: "Chen Li"
+ ac_bertrand: "Bertrand"
+ ac_momochi_ayame: "Ayame Momochi"
