--- a/localisation/ac_characters_l_russian.yml
+++ b/localisation/ac_characters_l_russian.yml
@@ -317,4 +317,16 @@
  ac_gasper_vladi: "Гаспар Влади"
  ac_ryou_akizuki: "Рё Акидзуки"
  ac_saki_mizushima: "Саки Мидзусима"
+
+ ac_simon_hartmann: "Симон Хартман"
+ ac_noma_rune: "Нома Рун"
+ ac_kiruko: "Кируко"
+ ac_poison: "Пойзон"
+ ac_chen_li: "Чен Ли"
+ ac_bertrand: "Бертран"
+ ac_momochi_ayame: "Аямэ Момоти"
+ ac_adolfo_camila: "Адольфо Камила"
+ ac_adelita_grau: "Аделита Грау"
+ ac_kisaragi_yura: "Кисараги Юра"
+ ac_coco: "Коко"
  
